<resources>
    <string name="app_name">Bagex</string>
    <string name="user_id_txt">User ID</string>
    <string name="password_txt">Password</string>
    <string name="login_txt">Login</string>
    <string name="version_txt">Version %s</string>
    <string name="user_id_hint">Enter User ID</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="home">HOME</string>
    <string name="jobs">JOBS</string>
    <string name="exception">EXCEPTION</string>
    <string name="more">MORE</string>
    <string name="proceed">Proceed</string>
    <string name="select_scan">Select Scan Type</string>
    <string name="ofd">OFD</string>
    <string name="massPOD">Mass POD</string>
    <string name="rts">RTS</string>
    <string name="pod">POD</string>
    <string name="total_value">Total Scan Count</string>
    <string name="next">Next</string>
    <string name="logout">Logout</string>
    <string name="awb_no">AWB No</string>
    <string name="bagid">Bag ID</string>
    <string name="serNo">Seal No</string>
    <string name="order_no">Order no</string>
    <string name="terminal_no">Terminal No</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="total_order_bags">Total order bags</string>
    <string name="actual_bags">Actual Bags</string>
    <string name="to_be_paid">Additional Amount to be paid</string>
    <string name="start_scan">Start Scan</string>
    <string name="bag_tag">Bag tag Number*</string>
    <string name="scan_or_enter">Scan or enter</string>
    <string name="seal_number">Seal Number</string>
</resources>