<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:scaleType="centerCrop"
            android:src="@drawable/login_top_img" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:background="@drawable/login_top_gradient" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/login_top_round_bg">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_bagexgreenlogo" />

                    <com.tezsol.bagex.custom.ui.BagexTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/user_id_txt"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/usernameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_bg"
                        android:drawableStart="@drawable/ic_edit_user"
                        android:drawablePadding="10dp"
                        android:gravity="start|center_vertical"
                        android:hint="@string/user_id_hint"
                        android:importantForAutofill="no"
                        android:padding="10dp"
                        android:textSize="14sp" />

                    <com.tezsol.bagex.custom.ui.BagexTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/password_txt"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/passwordEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_bg"
                        android:drawableStart="@drawable/ic_edit_password"
                        android:drawablePadding="10dp"
                        android:gravity="start|center_vertical"
                        android:hint="@string/enter_password_hint"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textSize="14sp" />


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="10dp"
                        android:elevation="6dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        app:cardBackgroundColor="@color/colorPrimary"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:id="@+id/login_btn_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="horizontal">

                            <com.tezsol.bagex.custom.ui.BagexTextView
                                android:layout_width="0dp"
                                android:layout_height="42dp"
                                android:layout_weight="1"
                                android:gravity="start|center_vertical"
                                android:paddingStart="20dp"
                                android:text="@string/login_txt"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginEnd="20dp"
                                android:src="@drawable/ic_login_continue" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                    <com.tezsol.bagex.custom.ui.BagexTextView
                        android:id="@+id/version_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="18dp"
                        android:text="@string/version_txt"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </ScrollView>


        </FrameLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</FrameLayout>