<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BagImageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.tezsol.bagex.custom.ui.BagexTextView
            android:id="@+id/bag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2sp"
            android:textColor="#2C2C2C"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/bagPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/black"
            android:padding="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image" />

        <com.tezsol.bagex.custom.ui.BagexTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/bag_tag"
            android:textColor="#2C2C2C"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tagNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:hint="@string/scan_or_enter"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_scan_icon" />

        </LinearLayout>


        <com.tezsol.bagex.custom.ui.BagexTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/seal_number"
            android:textColor="#2C2C2C"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_bg"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sealNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:hint="@string/scan_or_enter"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_scan_icon" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:elevation="6dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="8dp">


            <com.tezsol.bagex.custom.ui.BagexTextView
                android:id="@+id/lableText"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="20dp"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</FrameLayout>