<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical"
    tools:context=".JobsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <include layout="@layout/app_bar_all" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/page_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.tezsol.bagex.custom.ui.BagexTextView
                android:id="@+id/select_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="top"
                android:text="@string/select_scan"
                android:textColor="@color/textHeaderColor"
                android:textSize="16sp"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:id="@+id/ofdLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.tezsol.bagex.custom.ui.BagexTextView
                        android:id="@+id/ofd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="14dp"
                        android:layout_weight="1"
                        android:text="@string/ofd"
                        android:textColor="@color/text2ndHeaderColor" />


                    <ImageView
                        android:id="@+id/arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_arrowright" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/podLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.tezsol.bagex.custom.ui.BagexTextView
                        android:id="@+id/pod"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="14dp"
                        android:layout_weight="1"
                        android:text="@string/pod"
                        android:textColor="@color/text2ndHeaderColor" />


                    <ImageView
                        android:id="@+id/podArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_arrowright" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/massPodLyt"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.tezsol.bagex.custom.ui.BagexTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="14dp"
                        android:layout_weight="1"
                        android:text="@string/massPOD"
                        android:textColor="@color/text2ndHeaderColor" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_arrowright" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/rtsLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.tezsol.bagex.custom.ui.BagexTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="14dp"
                        android:layout_weight="1"
                        android:text="@string/rts"
                        android:textColor="@color/text2ndHeaderColor" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_arrowright" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </FrameLayout>


</LinearLayout>