<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/ll_scanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:padding="5dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/awbInput"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@null" />

            <androidx.cardview.widget.CardView
                android:id="@+id/okBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp">

                <com.tezsol.bagex.custom.ui.BagexTextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="Ok"
                    android:textColor="@color/white" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#F6F8FA"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:text="@string/awb_no"
                android:textAllCaps="true"
                android:textColor="#34495E" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_search_small"
                android:text="@string/serNo"
                android:textAllCaps="true"
                android:textColor="#34495E" />

            <TextView
                android:id="@+id/awbDeleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="10dp"
                android:drawableEnd="@drawable/ic_delete"
                android:drawablePadding="10dp"
                android:gravity="end"
                android:text="Delete all"
                android:textAllCaps="true"
                android:textColor="#34495E" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scanList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.tezsol.bagex.custom.ui.BagexTextView
                    android:id="@+id/total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/total_value"
                    android:textColor="@color/textTotalColor" />

                <com.tezsol.bagex.custom.ui.BagexTextView
                    android:id="@+id/scanTtl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="0"
                    android:textColor="@color/black" />

            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/awbNext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark">

            <com.tezsol.bagex.custom.ui.BagexTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="complete"
                android:textColor="@color/white" />

        </FrameLayout>


    </LinearLayout>


</LinearLayout>